example of javascript

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                       <option>15</option>
                     </select>
                   </div>
-                  <button type="submit" class="btn btn-search">Search</button>
+                  <a href="#" id="searchOneWay" class="btn btn-search">Search</a>
                 </form>
               </div>
               <div role="tabpanel" class="tab-pane" id="profile">
@@ -130,7 +130,7 @@
                       <option>15</option>
                     </select>
                   </div>
-                  <button type="submit" class="btn btn-search">Search</button>
+                  <a href="#" id="searchReturn" class="btn btn-search">Search</a>
                 </form>
               </div>
             </div>
@@ -208,12 +208,9 @@
             </div>
           </script>
           <div id="content-placeholder"></div>
-
         </div>
       </div>
-
       </div>
-
     </div>
 
 
